src/objects/Related_Resource__c.object
<CustomObject>
    <fields>
        <fullName>PrimaryType__c</fullName>
        <formula>TEXT(Primary_Web_Resource__r.Type__c)</formula>
        <label>Primary Web Resource Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Web_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Web Resource</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Related Resources</relationshipLabel>
        <relationshipName>Related_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Related Web Resources</relationshipLabel>
        <relationshipName>Related_Web_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedType__c</fullName>
        <formula>TEXT( Related_Web_Resource__r.Type__c )</formula>
        <label>Related Web Resource Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Web_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Web Resource</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>Related Resources (Related Web Resource)</relationshipLabel>
        <relationshipName>Related_Resources1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Resource</label>
    <nameField>
        <displayFormat>RR {0}</displayFormat>
        <label>Related Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>